--- a/.gitignore
+++ b/.gitignore
@@ -165,7 +165,7 @@ dmypy.json
 cython_debug/
 
 # Secrets file
-secrets.json
+#secrets.json
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
